--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			margin: 0;
 		}
 		html, body {
-			background: #000;
+			background: rgba(0, 0, 0, 0);
 			color: #fff;
 			overflow: hidden;
 			touch-action: none;
