--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="UTF-8" />
@@ -6,6 +6,15 @@
 	<title>Super Mario Bros</title>
 	<meta name="description" content="Super Mario Bros clone." />
 	
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-NPHZV95WZ2"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'G-NPHZV95WZ2');
+	</script>
 	<!-- Standardised web app manifest -->
 	<link rel="manifest" href="appmanifest.json" />
 	
@@ -134,21 +143,21 @@
 		};
     </script>
 	<script>
-		(function (i, s, o, g, r, a, m) {
-			i['GoogleAnalyticsObject'] = r;
-			i[r] = i[r] || function () {
-				(i[r].q = i[r].q || []).push(arguments)
-			},
-			i[r].l = 1 * new Date();
-			a = s.createElement(o),
-			m = s.getElementsByTagName(o)[0];
-			a.async = 1;
-			a.src = g;
-			m.parentNode.insertBefore(a, m)
-		})(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+		//(function (i, s, o, g, r, a, m) {
+			//i['GoogleAnalyticsObject'] = r;
+			//i[r] = i[r] || function () {
+		//		(i[r].q = i[r].q || []).push(arguments)
+		//	},
+		//	i[r].l = 1 * new Date();
+		//	a = s.createElement(o),
+		//	m = s.getElementsByTagName(o)[0];
+		//	a.async = 1;
+		//	a.src = g;
+		//	m.parentNode.insertBefore(a, m)
+		//})(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
-		ga('create', 'UA-78361109-1', 'auto');
-		ga('send', 'pageview');
+		//ga('create', 'UA-78361109-1', 'auto');
+		//ga('send', 'pageview');
 	</script>
 </body> 
 </html> 
